--- a/2_homework.tex
+++ b/2_homework.tex
@@ -12,7 +12,7 @@
 \begin{problem}[Стохастический интеграл 2]
     Пусть $B_t$ -- броуновское движение.  Введём forward-looking стохастический интеграл по формуле:
     $$
-        \int_0^t g_s \circ dB_s := \lim_{\delta \to 0} \sum_{k=0}^n g_{t_{k+1}} (B_{t_{k+1}} - B_{})
+        \int_0^t g_s \circ dB_s := \lim_{\delta \to 0} \sum_{k=0}^{n-1} g_{t_{k+1}} (B_{t_{k+1}} - B_{t_k})
     $$где $0=t_0 < \ldots < t_n = t$ -- разбиение $[0, t]$, предел берётся по всем разбиениям при диаметре $\delta \to 0$. Вычислить
     $$
         2 \int_0^t B_s \circ dB_s
